Custom--app/main/default/objects/Disposition__c/fields/Profit_Loss_BPO__c.field-meta.xml
<CustomField>
    <fullName>Profit_Loss_BPO__c</fullName>
    <formula>Net_Proceeds_BPO__c  -  Accounting_Basis_Actual__c</formula>
    <label>Profit / Loss (BPO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>