Custom--app/main/default/objects/Disposition__c/fields/Profit_Loss_BPO_Percent__c.field-meta.xml
<CustomField>
    <fullName>Profit_Loss_BPO_Percent__c</fullName>
    <description>Net_Proceeds_BPO__c  -  (  Accounting_Basis_Actual__c  /  Accounting_Basis_Actual__c  - 1 )</description>
    <formula>Net_Proceeds_BPO__c  /  Accounting_Basis_Actual__c  - 1</formula>
    <label>Profit / Loss % (BPO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>