Custom--app/main/default/objects/Disposition__c/fields/Profit_Loss_Market_Value_Percent__c.field-meta.xml
<CustomField>
    <fullName>Profit_Loss_Market_Value_Percent__c</fullName>
    <formula>Net_Proceeds_Market_Value__c  /  Accounting_Basis_Actual__c - 1</formula>
    <label>Profit / Loss % (Market Value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>