Custom--app/main/default/objects/Disposition__c/fields/Profit_Loss_Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Profit_Loss_Offer_Price__c</fullName>
    <formula>Total_Actual_Closing_Costs__c -  Current_Offer_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit/Loss (Offer Price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>