Custom--app/main/default/objects/Disposition__c/fields/Projected_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Closing_Date__c</fullName>
    <label>Projected Closing Date</label>
    <type>Date</type>
</CustomField>