Custom--app/main/default/objects/Disposition__c/fields/Property_Zip_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code_Text__c</fullName>
    <description>D-00015414</description>
    <label>Property Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>