Custom--app/main/default/objects/Disposition__c/fields/Realtor_Agent__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Agent__c</fullName>
    <label>Realtor (Agent)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>