Custom--app/main/default/objects/Disposition__c/fields/Recommended_for_Dispo_by__c.field-meta.xml
<CustomField>
    <fullName>Recommended_for_Dispo_by__c</fullName>
    <label>Recommended for Dispo by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leasing</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
            <value>
                <fullName>Rehab</fullName>
            </value>
            <value>
                <fullName>Acquisitions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>