Custom--app/main/default/objects/Disposition__c/fields/Rehab__c.field-meta.xml
<CustomField>
    <fullName>Rehab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposition Rehab</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Only Disposition Rehab should be associated with Disposition record</errorMessage>
        <filterItems>
            <field>Rehab__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Disposition</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Rehab__c</referenceTo>
    <relationshipLabel>Disposition</relationshipLabel>
    <relationshipName>Disposition</relationshipName>
    <type>Lookup</type>
</CustomField>