Custom--app/main/default/objects/Disposition__c/fields/Renewals__c.field-meta.xml
<CustomField>
    <fullName>Renewals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewals</label>
    <referenceTo>Renewal__c</referenceTo>
    <relationshipLabel>Disposition</relationshipLabel>
    <relationshipName>Disposition</relationshipName>
    <type>Lookup</type>
</CustomField>