Custom--app/main/default/objects/Disposition__c/fields/Required_Disclosures__c.field-meta.xml
<CustomField>
    <fullName>Required_Disclosures__c</fullName>
    <label>Required Disclosures</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Sinkhole</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
            <value>
                <fullName>CDD</fullName>
            </value>
            <value>
                <fullName>LBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>