Custom--app/main/default/objects/Disposition__c/fields/Seller_s_IH_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Seller_s_IH_Attorney__c</fullName>
    <label>Seller's (IH) Attorney</label>
    <length>80</length>
    <type>Text</type>
</CustomField>