Custom--app/main/default/objects/Disposition__c/fields/Selling_Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>Selling_Agent_Commission__c</fullName>
    <label>Selling Agent Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>