Custom--app/main/default/objects/Disposition__c/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <description>Disposition Date must match Settlement Date on HUD , field Label has been modified  as part of Data Integrity Project</description>
    <inlineHelpText>Disposition Date must match Settlement Date on HUD</inlineHelpText>
    <label>Disposition Date</label>
    <type>Date</type>
</CustomField>