Custom--app/main/default/objects/Disposition__c/fields/Showing_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Showing_Feedback__c</fullName>
    <label>Showing Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>