Custom--app/main/default/objects/Disposition__c/fields/Submitted_for_IH_Dispo_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_IH_Dispo_Approval__c</fullName>
    <label>Submitted for IH Dispo Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>