Custom--app/main/default/objects/Disposition__c/fields/Targeted_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Buyer__c</fullName>
    <label>Targeted Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End-user</fullName>
            </value>
            <value>
                <fullName>Investor - Rent</fullName>
            </value>
            <value>
                <fullName>Institutional Buyer</fullName>
            </value>
            <value>
                <fullName>Investor - Flip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>