Custom--app/main/default/objects/Disposition__c/fields/TempDispo__c.field-meta.xml
<CustomField>
    <fullName>TempDispo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TempDispo</label>
    <type>Checkbox</type>
</CustomField>