Custom--app/main/default/objects/Disposition__c/fields/Title_Closing_Fees_Final_HUD__c.field-meta.xml
<CustomField>
    <fullName>Title_Closing_Fees_Final_HUD__c</fullName>
    <label>Title/Closing Fees (Final HUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>