Custom--app/main/default/objects/Disposition__c/fields/Title_Company__c.field-meta.xml
<CustomField>
    <fullName>Title_Company__c</fullName>
    <label>Title Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>