Custom--app/main/default/objects/Disposition__c/fields/Top_Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Top_Offer_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Top Offer Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>