Custom--app/main/default/objects/Disposition__c/fields/TRS_Transfer_Request__c.field-meta.xml
<CustomField>
    <fullName>TRS_Transfer_Request__c</fullName>
    <description>TRS Transfer Request field will be required only for Fund 02 properties</description>
    <label>TRS Transfer Request</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fund__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>