Custom--app/main/default/objects/Disposition__c/fields/TRS_Transfer_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>TRS_Transfer_Request_Date__c</fullName>
    <description>TRS Transfer Request Date field will be populated automatically whenever "TRS Transfer Request" field is marked as Yes</description>
    <label>TRS Transfer Request Date</label>
    <type>Date</type>
</CustomField>