Custom--app/main/default/objects/Disposition__c/fields/TRS_Transferred__c.field-meta.xml
<CustomField>
    <fullName>TRS_Transferred__c</fullName>
    <description>TRS Transferred should be  yes if creating  Disposition Rehab record on Fund 02 Property</description>
    <label>TRS Transferred</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fund__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>