Custom--app/main/default/objects/Disposition__c/fields/TRS_Transferred_Date__c.field-meta.xml
<CustomField>
    <fullName>TRS_Transferred_Date__c</fullName>
    <description>TRS Transferred Date will be populated automatically whenever "TRS Transferred" field is marked as Yes</description>
    <label>TRS Transferred Date</label>
    <type>Date</type>
</CustomField>