Custom--app/main/default/objects/Disposition__c/fields/Vacancy_Status__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Status__c</fullName>
    <description>If YRR Current Tenant Status is "Admin", Vacancy Status will be "Vacant". For all other cases, Vacancy Status will display the same value as YRR Current Tenant Status</description>
    <formula>IF( OR(UPPER(Portfolio__r.Residence__r.YRR_Current_Tenant_Status__c) = 'ADMIN' ,UPPER(Portfolio__r.Residence__r.YRR_Current_Tenant_Status__c) = 'DOWN') , 'Vacant' ,Portfolio__r.Residence__r.YRR_Current_Tenant_Status__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It depends on Residence's Most Recent Yardi Rent Roll  Field 'Current Tenant Status'. it is 'Vacant' If Current Tenant Status = 'Admin/Down'</inlineHelpText>
    <label>Vacancy Status</label>
    <type>Text</type>
</CustomField>