Custom--app/main/default/objects/Disposition__c/fields/X3rd_Party_BPO__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_BPO__c</fullName>
    <label>3rd Party BPO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>