Custom--app/main/default/objects/Disposition__c/fields/Yardi_Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Property_Code__c</fullName>
    <formula>Portfolio__r.Yardi_Property_Code__c</formula>
    <label>zzzz_Yardi Property Code</label>
    <type>Text</type>
</CustomField>