Custom--app/main/default/objects/Disposition__c/validationRules/Bulk_Disposition_Group_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Bulk_Disposition_Group_Required</fullName>
    <active>true</active>
    <description>Bulk Disposition Group is Required only if Bulk Disposition is YES</description>
    <errorConditionFormula>AND( TEXT(Bulk_Disposition__c)== 'Yes', Bulk_Disposition_Group__c ==NULL)</errorConditionFormula>
    <errorDisplayField>Bulk_Disposition_Group__c</errorDisplayField>
    <errorMessage>Bulk Disposition Group is Required when  Bulk Disposition is YES</errorMessage>
</ValidationRule>