Custom--app/main/default/objects/Disposition__c/validationRules/Date_of_BX_Approval_of_Sale_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_BX_Approval_of_Sale_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( BX_Approval_of_Sale__c, 'Yes'),
       ISBLANK( Date_of_BX_Approval_of_Sale__c) 
 )</errorConditionFormula>
    <errorDisplayField>Date_of_BX_Approval_of_Sale__c</errorDisplayField>
    <errorMessage>You must enter a value.</errorMessage>
</ValidationRule>