Custom--app/main/default/objects/Disposition__c/validationRules/Disposition_Date_required_when_Sold.validationRule-meta.xml
<ValidationRule>
    <fullName>Disposition_Date_required_when_Sold</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Settlement_Date__c) ,
    ISBLANK(Settlement_Date__c),
   !ISPICKVAL(Listing_Status__c,'Cancelled'),
   ISPICKVAL(Portfolio__r.Acquisition_Status__c, 'Sold')
   )</errorConditionFormula>
    <errorDisplayField>Settlement_Date__c</errorDisplayField>
    <errorMessage>Disposition date  must be populated When Portfolio Acquisition Status is Sold</errorMessage>
</ValidationRule>