Custom--app/main/default/objects/Disposition__c/listViews/Phoenix.listView-meta.xml
<ListView>
    <fullName>Phoenix</fullName>
    <columns>NAME</columns>
    <columns>Portfolio__c</columns>
    <columns>Region__c</columns>
    <columns>Disposition_Strategy__c</columns>
    <columns>Sale_Rationale__c</columns>
    <columns>Status_of_Listing__c</columns>
    <columns>Aging_of_Days_Since_Acq__c</columns>
    <columns>Disposition_Notes_Issues__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Phoenix</value>
    </filters>
    <label>Phoenix</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>