Custom--app/main/default/objects/Disposition__c/listViews/Seattle_Special.listView-meta.xml
<ListView>
    <fullName>Seattle_Special</fullName>
    <columns>NAME</columns>
    <columns>Portfolio__c</columns>
    <columns>Region__c</columns>
    <columns>Property_City__c</columns>
    <columns>Disposition_Strategy__c</columns>
    <columns>Sale_Rationale__c</columns>
    <columns>Status_of_Listing__c</columns>
    <columns>Aging_of_Days_Since_Acq__c</columns>
    <columns>Disposition_Notes_Issues__c</columns>
    <columns>Brief_Synopsis__c</columns>
    <columns>Dispo_Lease_Renewal_Strategy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Seattle</value>
    </filters>
    <filters>
        <field>Listing_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed - Funded,Cancelled</value>
    </filters>
    <label>Seattle - Special</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>